# vulkan_masic

./: CMakeLists.txt
data/objects/: arrow.gltf  coord_arrows.gltf  cube.gltf  phong_light_test.gltf  tank.gltf
data/objects/1/: cube.gltf
data/objects/bak/: cube.gltf
data/objects/blend/: CoordArrowsModel.blend  CoordArrowsModel.blend1  CoordArrowsModel2.blend  CoordArrowsModel3.blend  CoordArrowsModel4.blend  arrow.blend  cube.blend  phong_light_test.blend  phong_light_test.blend1
data/shaders/: basic_phong.frag  basic_phong.vert  color.frag  color.vert  compile.sh  imgui.frag  imgui.vert  line.frag  line.vert  phong.frag  phong.vert  shader.frag
shaders/: compile.bat  shader.frag  shader.vert
src/: application.cpp  application.h  application_options.cpp  application_options.h  application_options.xml  graphics_pipelines.xml  main.cpp  main_menu.xml  main_menu1.xml  masic_schema.xsd  vulkan_application.cpp  vulkan_application.h  window_surface.cpp  window_surface.h
src/actors/: actor.cpp  actor.h  actor_component.cpp  actor_component.h  actor_factory.cpp  actor_factory.h  base_scene_node_component.cpp  base_scene_node_component.h  camera_component.cpp  camera_component.h  coord_arrow_component.cpp  coord_arrow_component.h  light_component.cpp  light_component.h  model_component.cpp  model_component.h  transform_animation_component.cpp  transform_animation_component.h  transform_component.cpp  transform_component.h
src/animation/: matrix_animation.cpp  matrix_animation.h
src/engine/: actor_animation_player.cpp  actor_animation_player.h  base_engine_logic.cpp  base_engine_logic.h  engine.h  human_view.cpp  human_view.h  iengine_logic.h  iengine_physics.h  iengine_view.h  iscreen_element.h  level_manager.h  renderer_enum.h  screen_element_scene.cpp  screen_element_scene.h
src/engine/controllers/: ikeyboard_handler.cpp  ikeyboard_handler.h  imovement_controller.cpp  imovement_controller.h  ipointer_handler.cpp  ipointer_handler.h  movement_controller.cpp  movement_controller.h
src/engine/screen_elements/: actor_menu_ui.cpp  actor_menu_ui.h  animation_menu_ui.cpp  animation_menu_ui.h  base_ui.cpp  base_ui.h  imgui_tools.cpp  imgui_tools.h  iscreen_element.h  node_menu_ui.cpp  node_menu_ui.h  screen_element_scene.cpp  screen_element_scene.h  test_menu_ui.cpp  test_menu_ui.h
src/engine/views/: human_view.cpp  human_view.h  iengine_view.h
src/events/: base_event_data.cpp  base_event_data.h  event_manager.cpp  event_manager.h  ievent_data.h  ievent_manager.cpp  ievent_manager.h
src/events/cicadas/: evt_data_destroy_actor.cpp  evt_data_destroy_actor.h  evt_data_destroy_scene_component.cpp  evt_data_destroy_scene_component.h  evt_data_dpi_scale.cpp  evt_data_dpi_scale.h  evt_data_environment_loaded.cpp  evt_data_environment_loaded.h  evt_data_key_pressed_event.cpp  evt_data_key_pressed_event.h  evt_data_key_released_event.cpp  evt_data_key_released_event.h  evt_data_maximize_window.cpp  evt_data_maximize_window.h  evt_data_minimize_window.cpp  evt_data_minimize_window.h  evt_data_modified_scene_component.cpp  evt_data_modified_scene_component.h  evt_data_mouse_button_pressed.cpp  evt_data_mouse_button_pressed.h  evt_data_mouse_button_released.cpp  evt_data_mouse_button_released.h  evt_data_mouse_motion.cpp  evt_data_mouse_motion.h  evt_data_mouse_wheel.cpp  evt_data_mouse_wheel.h  evt_data_move_actor.cpp  evt_data_move_actor.h  evt_data_new_actor.cpp  evt_data_new_actor.h  evt_data_new_model_component.cpp  evt_data_new_model_component.h  evt_data_new_scene_component.cpp  (+27 more)
src/graphics/: basic_drawable.cpp  basic_drawable.h  basic_uniform.h  basic_vertex.h  gltf_drawable.cpp  gltf_drawable.h  imgui_drawable.cpp  imgui_drawable.h  model_data.cpp  model_data.h  render_resource.h  scene_config.cpp  scene_drawable.cpp  scene_drawable.h  vertex_format.cpp  vertex_format.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_manager.cpp  vulkan_command_manager.h  vulkan_descriptor.h  vulkan_device.cpp  vulkan_device.h  vulkan_device_extensions.h  vulkan_drawable.cpp  vulkan_drawable.h  vulkan_image_buffer.cpp  vulkan_image_buffer.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_instance_layers_and_extensions.cpp  vulkan_instance_layers_and_extensions.h  vulkan_layout_tracker.cpp  vulkan_layout_tracker.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_queue_family.cpp  vulkan_queue_family.h  (+14 more)
src/physics/: bounding_box.cpp  bounding_box.h  bounding_frustum.cpp  bounding_frustum.h  bounding_oriented_box.cpp  bounding_oriented_box.h  bounding_sphere.cpp  bounding_sphere.h  collision_box.h  collision_data.h  collision_detector.cpp  collision_detector.h  collision_plane.h  collision_primitive.cpp  collision_primitive.h  collision_sphere.h  contact.cpp  contact.h  contact_generator.h  contact_resolver.cpp  contact_resolver.h  containment_type.h  ground_contacts.cpp  ground_contacts.h  intersection_tests.cpp  intersection_tests.h  particle.cpp  particle.h  particle_anchored_spring.cpp  particle_anchored_spring.h  particle_bungee.cpp  particle_bungee.h  particle_cable.cpp  particle_cable.h  particle_cable_constraint.cpp  particle_cable_constraint.h  particle_constraint.cpp  particle_constraint.h  particle_contact.cpp  particle_contact.h  (+27 more)
src/procs/: exec_process.h  process_manager.h
src/scene/: basic_camera_node.cpp  basic_camera_node.h  camera_node.cpp  camera_node.h  light_manager.cpp  light_manager.h  material.cpp  material.h  mesh_node_geometry_generator.cpp  mesh_node_geometry_generator.h  mesh_node_loader.cpp  mesh_node_loader.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h  scene_node_properties.cpp  scene_node_properties.h
src/tools/: arena_allocator.cpp  arena_allocator.h  cpu_load_balance.cpp  cpu_load_balance.h  delegate.h  generic_object_factory.cpp  math_tools.cpp  math_tools.h  memory_utility.h  mt_random.cpp  mt_random.h  optional.h  signals.h  string_tools.cpp  string_tools.h  thread_pool.cpp  thread_pool.h  thread_safe_lookup_table.cpp  thread_safe_lookup_table.h  thread_safe_queue.h  vulkan_tools.h
(+139 files in other folders)
